fix(Header): Aumentar z-index a 85 para la animación de scroll

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -92,4 +92,12 @@
   opacity: 0 !important;
   transition: opacity 0.2s ease-in-out !important;
 }
+
+@media (max-width: 1024px) {
+  
+  /* Oculta el cursor personalizado */
+  .mf-cursor {
+    display: none !important;
+  }
+}
 /* --- FIN: Estilos de Mouse Follower --- */
